# Real-Time-Graphics-Engine

./: CMakeLists.txt  GraphicsTutorials.sln  README.md  build.bat  deferred_config.txt  rebuild.bat  tree_config.txt
Coursework/: AnimalManager.cpp  AnimalManager.h  BlockRenderer.cpp  BlockRenderer.h  Coursework.vcxproj  CustomTerrainAdapter.h  DayNightCycle.cpp  DayNightCycle.h  DeferredRenderer.cpp  DeferredRenderer.h  DeferredScenePass.h  FBOManager.cpp  FBOManager.h  FPSCounter.h  GBuffer.cpp  GBuffer.h  GrassRenderer.cpp  GrassRenderer.h  LightingConfig.h  ParticleSystem.cpp  ParticleSystem.h  PointLight.cpp  PointLight.h  PostProcessPass.h  RenderConfig.h  RenderPass.h  RenderPipeline.h  Renderer.cpp  Renderer.h  ScenePass.cpp  ScenePass.h  ShadowPass.h  ShadowSystem.cpp  ShadowSystem.h  SkeletalAnimator.cpp  SkeletalAnimator.h  TechnicalDocument.md  TerrainSampler.cpp  TerrainSampler.h  TreeConfig.h  (+11 more)
Shaders/: TexturedFragment.glsl  block.frag  block.vert  bloomComposite.frag  brightPass.frag  copy.frag  copy.vert  debug_unlit.frag  debug_unlit.vert  deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_lighting.vert  gaussianBlur.frag  grass_instanced.frag  grass_instanced.vert  particle.frag  particle.vert  sceneNode.frag  sceneNode.vert  shadow.frag  shadow.vert  skinned.frag  skinned.vert  skybox.frag  skybox.vert  staticVertex.glsl  sun.frag  sun.vert  terrain.frag  terrain.vert  timeTransition.frag  water.frag  water.vert
Textures/roof_tiles_chinese/: RoofingTiles005_1K-PNG.blend  RoofingTiles005_1K-PNG.mtlx  RoofingTiles005_1K-PNG.tres  RoofingTiles005_1K-PNG.usdc
Textures/temple_wall_stone/: stone_wall_05_1k.gltf
Textures/water/: others_0028_description.txt  others_0028_keywords.txt
nclgl/: Camera.cpp  Camera.h  CustomTerrain.cpp  CustomTerrain.h  HeightMap.cpp  HeightMap.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  OGLRenderer.cpp  OGLRenderer.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  Window.cpp  Window.h  common.h  nclgl.vcxproj
nclgl/Extra/: GLTFLoader.cpp  GLTFLoader.h  OGLTexture.cpp
